--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "es2018"
     ],
+    "esModuleInterop": true,
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -24,7 +25,7 @@
     ]
   },
   "exclude": [
-    "node_modules",
+//    "node_modules",
     "cdk.out"
   ]
 }
