--- a/package.json
+++ b/package.json
@@ -11,27 +11,31 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "aws-cdk": "1.117.0",
     "@aws-cdk/assert": "1.117.0",
-    "@aws-cdk/aws-lambda": "1.117.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.117.0",
-    "@aws-cdk/aws-lambda-event-sources": "1.117.0",
-    "@aws-cdk/aws-ssm": "1.117.0",
+    "@aws-cdk/aws-apigateway": "1.117.0",
     "@aws-cdk/aws-certificatemanager": "1.117.0",
+    "@aws-cdk/aws-dynamodb": "1.117.0",
+    "@aws-cdk/aws-sqs": "1.117.0",
+    "@aws-cdk/aws-sns": "1.117.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.117.0",
+    "@aws-cdk/aws-lambda": "1.117.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.117.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.117.0",
     "@aws-cdk/aws-route53": "1.117.0",
     "@aws-cdk/aws-route53-targets": "1.117.0",
     "@aws-cdk/aws-s3": "1.117.0",
-    "@aws-cdk/aws-dynamodb": "1.117.0",
-    "@aws-cdk/aws-apigateway": "1.117.0",
+    "@aws-cdk/aws-ssm": "1.117.0",
     "@types/aws-lambda": "^8.10.81",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.117.0",
     "aws-sdk": "^2.954.0",
     "aws-sdk-mock": "^5.2.1",
+    "esbuild": "^0.12.19",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "@aws-cdk/core": "1.117.0",
@@ -40,6 +44,7 @@
     "moment": "^2.29.1",
     "sharp": "^0.28.3",
     "source-map-support": "^0.5.16",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.7.1"
   }
 }
