--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,12 @@ jobs:
           paths:
             - .
   deploy-test:
-    executor: aws-cli/default
+#    executor: aws-cli/default
+    machine:
+      image: ubuntu-1604:202007-01
     steps:
-      - setup_remote_docker:
-          version: 20.10.6
+#      - setup_remote_docker:
+#          version: 20.10.6
       - attach_workspace:
           at: .
       - deploy-test
