--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ commands:
   deploy-test:
     steps:
       - run: npm run cdk deploy --require-approval never dinero-tst
-  # deploy-prod:
-  #   steps:
-  #     - run: cdk deploy dinero
+   deploy-prod:
+     steps:
+       - run: npm run cdk deploy --require-approval never dinero
 
 jobs:
   build:
@@ -27,24 +27,33 @@ jobs:
           paths:
             - .
   deploy-test:
-#    executor: aws-cli/default
+    branches:
+      ignore:
+        - master
     machine:
       image: ubuntu-1604:202007-01
     steps:
-#      - setup_remote_docker:
-#          version: 20.10.6
       - attach_workspace:
-          at: .
+        at: .
       - deploy-test
-  # deploy-prod:
-  #   executor: agent
-  #   steps:
-  #     - deploy-prod
+  deploy-prod:
+    branches:
+      only:
+        - master
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - attach_workspace:
+        at: .
+      - deploy-prod
 
 workflows:
   build:
     jobs:
       - build
       - deploy-test:
+          requires:
+            - build
+      - deploy-prod:
           requires:
             - build
