--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@aws-cdk/assert": "1.117.0",
     "@aws-cdk/aws-apigateway": "1.117.0",
     "@aws-cdk/aws-certificatemanager": "1.117.0",
+    "@aws-cdk/aws-cloudfront": "1.117.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.117.0",
     "@aws-cdk/aws-dynamodb": "1.117.0",
     "@aws-cdk/aws-sqs": "1.117.0",
     "@aws-cdk/aws-sns": "1.117.0",
